# cannalchemy-v2

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  supabase-setup.sql
.claude/: session-log.md
backend/app/: config.py  database.py  main.py
cannalchemy/: __init__.py
cannalchemy/data/: cannlytics_aggregate.py  cannlytics_config.py  cannlytics_download.py  cannlytics_extract.py  cannlytics_import.py  cannlytics_strain_match.py  chembl.py  cleaning.py  dedup_strains.py  expand_molecules.py  graph.py  llm_classify.py  normalize.py  pipeline.py  pubchem.py  schema.py  strain_import.py  taxonomy.py
data/processed/: cannalchemy.db
docs/: SESSION-LOG.md
docs/plans/: 2026-02-20-cannalchemy-design.md  2026-02-20-cannalchemy-phase1-plan.md  2026-02-20-dataset-enrichment-design.md  2026-02-20-phase1a-data-cleaning.md  2026-02-20-phase1b-cannlytics-import.md
frontend/: .env.local.example  .gitignore  index.html  netlify.toml  package-lock.json  package.json  vite.config.js  wrangler.toml
frontend/public/: _headers  manifest.json  robots.txt  (+1 more)
notebooks/: 01-data-exploration.ipynb
scripts/: bootstrap_db.py  migrate_sf_strains.py
tests/: test_cannlytics_aggregate.py  test_cannlytics_config.py  test_cannlytics_download.py  test_cannlytics_extract.py  test_cannlytics_import.py  test_cannlytics_strain_match.py  test_chembl.py  test_cleaning.py  test_dedup_strains.py  test_expand_molecules.py  test_graph.py  test_llm_classify.py  test_normalize.py  test_pipeline.py  test_pubchem.py  test_schema.py  test_schema_v2.py  test_strain_import.py  test_taxonomy.py
(+128 files in other folders)
