[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cannalchemy"
version = "0.1.0"
description = "AI-powered terpene/cannabinoid effect prediction grounded in molecular pharmacology"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "sqlalchemy>=2.0",
    "huggingface_hub>=0.20",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
chemistry = ["rdkit"]
ml = ["scikit-learn>=1.4", "xgboost>=2.0"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
notebooks = ["jupyter", "matplotlib", "seaborn"]
dev = ["pytest>=8.0", "pytest-cov"]
all = ["cannalchemy[chemistry,ml,api,notebooks,dev]"]

[project.scripts]
cannalchemy = "cannalchemy.data.pipeline:main"

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require network access (deselect with '-k not network')",
]
